--- a/SCME.ProfileBuilder/MainWindow.xaml
+++ b/SCME.ProfileBuilder/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:res="clr-namespace:SCME.ProfileBuilder.Properties"
         mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924" Width="1500" Height="924"
         Title="SCME.ProfileBuilder" Closing="Window_Closing"
-        ResizeMode="CanResize"
+        ResizeMode="CanResize" Loaded="MetroWindow_Loaded"
         WindowStartupLocation="CenterScreen"
          WindowState="Maximized" Icon="App.ico"
         >
