--- a/SCME.WpfControlLibrary/CustomControls/AccentAndThemeUserControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/AccentAndThemeUserControl.xaml
@@ -4,23 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SCME.WpfControlLibrary.CustomControls"
-             xmlns:viewModels="clr-namespace:SCME.WpfControlLibrary.ViewModels"
+             xmlns:vm="clr-namespace:SCME.WpfControlLibrary.ViewModels"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <ListView Grid.Column="0" Grid.Row="0" Name="AccentsListView"  ItemsSource="{x:Static viewModels:AccentAndThemeUserControlVM.AccentColors}" SelectedItem="{Binding Path=(viewModels:AccentAndThemeUserControlVM.SelectAccentWrapper)}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionMode="Single" >
+        <ListView Grid.Column="0" Grid.Row="0" Name="AccentsListView"  ItemsSource="{x:Static vm:AccentAndThemeUserControlVM.AccentColors}" SelectedItem="{Binding Path=(vm:AccentAndThemeUserControlVM.SelectAccentWrapper)}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionMode="Single" >
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel  Orientation="Horizontal"></WrapPanel>
@@ -29,14 +21,14 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <Ellipse  Width="{StaticResource BaseFontSize}" Height="{StaticResource BaseFontSize}"  Fill="{Binding Color, Mode=OneWay}"></Ellipse>
-                        <TextBlock FontSize="{StaticResource BaseFontSize}" Text="{Binding Name}"/>
+                        <Ellipse Height="{Binding Source={x:Static vm:ResourceBinding.EllipseSize}}" Width="{Binding Source={x:Static vm:ResourceBinding.EllipseSize}}"  Fill="{Binding Color, Mode=OneWay}"></Ellipse>
+                        <TextBlock Text="{Binding Name}"/>
                     </StackPanel>
                 </DataTemplate>
                     
             </ListView.ItemTemplate>
         </ListView>
-        <ListView Grid.Column="0" Grid.Row="1"  ItemsSource="{x:Static viewModels:AccentAndThemeUserControlVM.AppThemes}" SelectedItem="{Binding Path=(viewModels:AccentAndThemeUserControlVM.SelectAppThemesWrapper)}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
+        <ListView Grid.Column="0" Grid.Row="1"  ItemsSource="{x:Static vm:AccentAndThemeUserControlVM.AppThemes}" SelectedItem="{Binding Path=(vm:AccentAndThemeUserControlVM.SelectAppThemesWrapper)}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel   Orientation="Horizontal" Background="{DynamicResource WindowBackgroundBrush}" ></WrapPanel>
@@ -45,8 +37,8 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" >
-                        <Ellipse Width="{StaticResource BaseFontSize}" Height="{StaticResource BaseFontSize}"  Fill="{Binding Color, Mode=OneWay}"></Ellipse>
-                        <TextBlock FontSize="{StaticResource BaseFontSize}" Text="{Binding Name}"/>
+                        <Ellipse   Fill="{Binding Color, Mode=OneWay}"></Ellipse>
+                        <TextBlock  Text="{Binding Name}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
