--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/BVTDataTemplate.xaml
@@ -9,163 +9,77 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ListViewTestParametersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Visibility="Visible"
-                         Margin="0,10,70,10" >
+    <Grid  >
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="93*"></ColumnDefinition>
-            <ColumnDefinition Width="7*"></ColumnDefinition>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
-        <Grid Style="{StaticResource ListItemGrid}">
-            <Border BorderBrush="{StaticResource xWhite1}" BorderThickness="1" />
-            <Label x:Name="cbBvtIsEnabled" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30"
-                                  Margin="10" Padding="2" Content="BVT" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
+        <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.TestType}" /> 
+        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding TestType, Converter={StaticResource BT2S},  UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Grid.Column="3" Grid.Row="0" Text="{x:Static res:Resources.CurrentLimit_mA}" />
+        <TextBlock Grid.Column="4" Grid.Row="0" Text="{Binding CurrentLimit }" />
 
-            <Button x:Name="btnBvt" Grid.Row="0" CommandParameter="3"  IsEnabled="False"
-                                Style="{StaticResource SpcButton}"
-                                Margin="120,0,20,0">
-                <Grid  Margin="10">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="45*" />
-                        <ColumnDefinition Width="10*" />
-                        <ColumnDefinition Width="50" />
-                        <ColumnDefinition Width="45*" />
-                        <ColumnDefinition Width="10*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
+        <TextBlock Grid.Column="0" Grid.Row="1" Text="{x:Static res:Resources.VoltageLimitD_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding VoltageLimitD }" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Grid.Column="2" Grid.Row="1" Text="{x:Static res:Resources.VoltageLimitR_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Grid.Column="3" Grid.Row="1" Text="{Binding VoltageLimitR}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
 
-                    <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.TestType}" />
-                    <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Right"
-                                       Content="{Binding TestType, Converter={StaticResource BT2S},  UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Grid.Column="0" Grid.Row="2" Text="{x:Static res:Resources.PlateTime_ms}" />
+        <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding PlateTime}" />
+        <TextBlock Grid.Column="2" Grid.Row="2" Text="{x:Static res:Resources.Rampup_Vms}" />
+        <TextBlock Grid.Column="3" Grid.Row="2" Text="{Binding RampUpVoltage}" />
 
-                    <Label Grid.Column="3" Grid.Row="0" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.CurrentLimit_mA}" />
-                    <Label Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right"
-                                       Content="{Binding CurrentLimit }" />
+        <TextBlock Grid.Column="0" Grid.Row="3" Text="{x:Static res:Resources.StartVoltage_V}" />
+        <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding StartVoltage}" />
+        <TextBlock Grid.Column="2" Grid.Row="3" Text="{x:Static res:Resources.Frequency_Hz}" />
+        <TextBlock Grid.Column="3" Grid.Row="3" Text="{Binding VoltageFrequency}" />
 
-                    <Label Grid.Column="0" Grid.Row="1" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.VoltageLimitD_V}"
-                                       Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                    <Label Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right"
-                                       Content="{Binding VoltageLimitD }"
-                                       Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock Grid.Column="0" Grid.Row="4" Text="{x:Static res:Resources.FreqRate_Hz}" />
+        <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding FrequencyDivisor, Converter={StaticResource FD2F}}" />
+        <TextBlock Grid.Column="2" Grid.Row="4" Text="{x:Static res:Resources.Mode}" />
+        <TextBlock Grid.Column="3" Grid.Row="4" Text="{Binding MeasurementMode}" />
 
-                    <Label Grid.Column="3" Grid.Row="1" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.VoltageLimitR_V}"
-                                       Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                    <Label Grid.Column="4" Grid.Row="1" HorizontalAlignment="Right"
-                                       Content="{Binding VoltageLimitR}"
-                                       Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-
-                    <Label Grid.Column="0" Grid.Row="2" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.PlateTime_ms}" />
-                    <Label Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right"
-                                       Content="{Binding PlateTime}" />
-
-                    <Label Grid.Column="3" Grid.Row="2" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.Rampup_Vms}" />
-                    <Label Grid.Column="4" Grid.Row="2" HorizontalAlignment="Right"
-                                       Content="{Binding RampUpVoltage}" />
-
-                    <Label Grid.Column="0" Grid.Row="3" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.StartVoltage_V}" />
-                    <Label Grid.Column="1" Grid.Row="3" HorizontalAlignment="Right"
-                                       Content="{Binding StartVoltage}" />
-
-                    <Label Grid.Column="3" Grid.Row="3" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.Frequency_Hz}" />
-                    <Label Grid.Column="4" Grid.Row="3" HorizontalAlignment="Right"
-                                       Content="{Binding VoltageFrequency}" />
-
-                    <Label Grid.Column="0" Grid.Row="4" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.FreqRate_Hz}" />
-                    <Label Grid.Column="1" Grid.Row="4" HorizontalAlignment="Right"
-                                       Content="{Binding FrequencyDivisor, Converter={StaticResource FD2F}}" />
-
-                    <Label Grid.Column="3" Grid.Row="4" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.Mode}" />
-                    <Label Grid.Column="4" Grid.Row="4" HorizontalAlignment="Right"
-                                       Content="{Binding MeasurementMode}" />
-
-
-                    <Grid Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"
-                                      Visibility="{Binding MeasurementMode, ConverterParameter=1, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="45*" />
-                            <ColumnDefinition Width="10*" />
-                            <ColumnDefinition Width="60" />
-                            <ColumnDefinition Width="45*" />
-                            <ColumnDefinition Width="10*" />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0"
-                                           Content="{x:Static res:Resources.MinVdrm_V}"
-                                           Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                        <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right"
-                                           Content="{Binding VDRM}"
-                                           Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-
-                        <Label Grid.Column="3" Grid.Row="0" Margin="0,0,0,0"
-                                           Content="{x:Static res:Resources.MinVrrm_V}"
-                                           Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                        <Label Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right"
-                                           Content="{Binding VRRM}"
-                                           Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                    </Grid>
-
-                    <Grid Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="5"
-                                      Visibility="{Binding MeasurementMode, ConverterParameter=0, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="35*" />
-                            <ColumnDefinition Width="10*" />
-                            <ColumnDefinition Width="100" />
-                            <ColumnDefinition Width="35*" />
-                            <ColumnDefinition Width="10*" />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0"
-                                           Content="{x:Static res:Resources.MaxIdrm_mA}"
-                                           Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                        <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right"
-                                           Content="{Binding IDRM, ElementName=profilesList}"
-                                           Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-
-                        <Label Grid.Column="3" Grid.Row="0" Margin="0,0,0,0"
-                                           Content="{x:Static res:Resources.MaxIrrm_mA}"
-                                           Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                        <Label Grid.Column="4" Grid.Row="0" HorizontalAlignment="Right"
-                                           Content="{Binding IRRM, ElementName=profilesList}"
-                                           Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
-                    </Grid>
-
-                </Grid>
-            </Button>
+        <Grid Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="4" Visibility="{Binding MeasurementMode, ConverterParameter=1, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.MinVdrm_V}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding VDRM}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.MinVrrm_V}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Grid.Column="3" Grid.Row="0" Text="{Binding VRRM}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
-        <Grid Grid.Column="1">
-            <Button Name="button" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}, Path=IsButtonDeleteVisible, Converter={StaticResource B2V}}"
-                            Background="White" Foreground="{StaticResource xPurple1}"
-                            VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                            Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
-                            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"
-                            Content="{StaticResource ClosePath}" Click="Button_OnClick"
-                            />
+
+        <Grid Grid.Column="0" Grid.Row="6" Grid.ColumnSpan="4" Visibility="{Binding MeasurementMode, ConverterParameter=0, Converter={StaticResource MM2V}, UpdateSourceTrigger=PropertyChanged}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="1*" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.MaxIdrm_mA}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding IDRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=1, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Grid.Column="2" Grid.Row="0" Text="{x:Static res:Resources.MaxIrrm_mA}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBlock Grid.Column="3" Grid.Row="0" Text="{Binding IRRM, ElementName=profilesList}" Visibility="{Binding TestType, ConverterParameter=2, Converter={StaticResource TT2V}, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
+
     </Grid>
 </UserControl>
