--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/QrrTqDataTemplate.xaml
@@ -9,24 +9,13 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ListViewTestParametersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Visibility="Visible" Margin="0,10,70,10">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="93*"/>
-            <ColumnDefinition Width="7*"/>
-        </Grid.ColumnDefinitions>
-        <Grid Style="{StaticResource ListItemGrid}">
-            <Border BorderBrush="{StaticResource xWhite1}" BorderThickness="1" />
-            <Label  HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30" Margin="10" Padding="2" Content="QrrTq" />
-            <Button x:Name="btnQrrTq" CommandParameter="6" Style="{StaticResource SpcButton}" IsEnabled="False" Margin="120,0,20,0">
-                <Grid Margin="10">
+                <Grid >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="84*" />
-                        <ColumnDefinition Width="2*" />
                         <ColumnDefinition Width="14*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
@@ -40,41 +29,28 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqMode}" />
-                    <Label Grid.Column="2" Grid.Row="0" HorizontalAlignment="Right" Content="{Binding Mode, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock Grid.Column="0" Grid.Row="0"  Text="{x:Static res:Resources.QrrTqMode}" />
+                    <TextBlock Grid.Column="1" Grid.Row="0"  Text="{Binding Mode, UpdateSourceTrigger=PropertyChanged}" />
 
-                    <Label Grid.Column="0" Grid.Row="1" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" Visibility="{Binding TrrMeasureBy9050Method, Converter={StaticResource B2V}}"/>
-                    <Path Grid.Column="2" Grid.Row="1" Margin="6" Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" 
-                                      Stroke="{StaticResource xWhite1}" Width="60" Visibility="{Binding TrrMeasureBy9050Method, Converter={StaticResource B2V}}" 
-                                      Stretch="Uniform" HorizontalAlignment="Right"  />
+                    <TextBlock Grid.Column="0" Grid.Row="1"  Text="{x:Static res:Resources.QrrTqTrrMeasureBy9050Method}" Visibility="{Binding TrrMeasureBy9050Method, Converter={StaticResource B2V}}"/>
+                    <Path Grid.Column="1" Grid.Row="1"  Data="M 0 1.5 L 1.5 3 L 3 0" StrokeThickness="1.5" Visibility="{Binding TrrMeasureBy9050Method, Converter={StaticResource B2V}}" Stretch="Uniform"   />
 
-                    <Label Grid.Column="0" Grid.Row="2" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqDirectCurrent}" />
-                    <Label Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right" Content="{Binding DirectCurrent, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock Grid.Column="0" Grid.Row="2"  Text="{x:Static res:Resources.QrrTqDirectCurrent}" />
+                    <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding DirectCurrent, UpdateSourceTrigger=PropertyChanged}" />
 
-                    <Label Grid.Column="0" Grid.Row="3" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqDCPulseWidth}" />
-                    <Label Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right" Content="{Binding DCPulseWidth, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock Grid.Column="0" Grid.Row="3"  Text="{x:Static res:Resources.QrrTqDCPulseWidth}" />
+                    <TextBlock Grid.Column="1" Grid.Row="3"  Text="{Binding DCPulseWidth, UpdateSourceTrigger=PropertyChanged}" />
 
-                    <Label Grid.Column="0" Grid.Row="4" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqDCRiseRate}" />
-                    <Label Grid.Column="2" Grid.Row="4" HorizontalAlignment="Right" Content="{Binding DCRiseRate, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock Grid.Column="0" Grid.Row="4"  Text="{x:Static res:Resources.QrrTqDCRiseRate}" />
+                    <TextBlock Grid.Column="1" Grid.Row="4"  Text="{Binding DCRiseRate, UpdateSourceTrigger=PropertyChanged}" />
 
-                    <Label Grid.Column="0" Grid.Row="5" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqDCFallRate}" />
-                    <Label Grid.Column="2" Grid.Row="5" HorizontalAlignment="Right" Content="{Binding DCFallRate, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource TDcFallRateVFE}}" />
+                    <TextBlock Grid.Column="0" Grid.Row="5"  Text="{x:Static res:Resources.QrrTqDCFallRate}" />
+                    <TextBlock Grid.Column="1" Grid.Row="5"  Text="{Binding DCFallRate, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource TDcFallRateVFE}}" />
 
-                    <Label Grid.Column="0" Grid.Row="6" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqOffStateVoltage}" />
-                    <Label Grid.Column="2" Grid.Row="6" HorizontalAlignment="Right" Content="{Binding OffStateVoltage, UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock Grid.Column="0" Grid.Row="6"  Text="{x:Static res:Resources.QrrTqOffStateVoltage}" />
+                    <TextBlock Grid.Column="1" Grid.Row="6"  Text="{Binding OffStateVoltage, UpdateSourceTrigger=PropertyChanged}" />
 
-                    <Label Grid.Column="0" Grid.Row="7" Margin="0,0,0,0" Content="{x:Static res:Resources.QrrTqOsvRate}" />
-                    <Label Grid.Column="2" Grid.Row="7" HorizontalAlignment="Right" Content="{Binding OsvRate, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource TOsvRateVFE}}" />
+                    <TextBlock Grid.Column="0" Grid.Row="7"  Text="{x:Static res:Resources.QrrTqOsvRate}" />
+                    <TextBlock Grid.Column="1" Grid.Row="7"  Text="{Binding OsvRate, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource TOsvRateVFE}}" />
                 </Grid>
-            </Button>
-        </Grid>
-        <Grid Grid.Column="1">
-            <Button Name="button" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}, Path=IsButtonDeleteVisible, Converter={StaticResource B2V}}"
-                            Background="White" Foreground="{StaticResource xPurple1}"
-                            VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                            Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
-                            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"
-                            Content="{StaticResource ClosePath}" Click="Button_OnClick"/>
-        </Grid>
-    </Grid>
 </UserControl>
