--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/dVdtDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/dVdtDataTemplate.xaml
@@ -9,29 +9,14 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/ListViewTestParametersDictionary.xaml" />
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Resources/Common.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Visibility="Visible" Margin="0,10,70,10" >
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="93*"></ColumnDefinition>
-            <ColumnDefinition Width="7*"></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <Grid Style="{StaticResource ListItemGrid}">
-            <Border BorderBrush="{StaticResource xWhite1}" BorderThickness="1" />
-            <Label  HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="30"
-                                  Margin="10" Padding="2" Content="dVdt" />
-            <Button x:Name="btnDvdt" CommandParameter="4" Style="{StaticResource SpcButton}" IsEnabled="False"
-                                Margin="120,0,20,0">
-
-                <Grid Margin="10">
+    <Grid Visibility="Visible" >
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="50*" />
-                        <ColumnDefinition Width="2*" />
-                        <ColumnDefinition Width="14*" />
-                        <ColumnDefinition Width="34*" />
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="1*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
@@ -42,54 +27,22 @@
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
-                    <Label Grid.Column="0" Grid.Row="0" Margin="0,0,0,0"
-                                       Content="{x:Static res:Resources.Mode}" />
-                    <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" HorizontalAlignment="Right"
-                                       Content="{Binding Mode, Converter={StaticResource DT2S},  UpdateSourceTrigger=PropertyChanged}" />
+                    <TextBlock Grid.Column="0" Grid.Row="0" Text="{x:Static res:Resources.Mode}" />
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Mode, Converter={StaticResource DT2S},  UpdateSourceTrigger=PropertyChanged}" />
 
-                    <Label Grid.Column="0" Grid.Row="1" Margin="0,0,0,0" 
-                                               Content="{x:Static res:Resources.DvDtVoltage}" />
-                    <Label Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right"
-                                               Content="{Binding Voltage }" />
+                    <TextBlock Grid.Column="0" Grid.Row="1"  Text="{x:Static res:Resources.DvDtVoltage}" />
+                    <TextBlock Grid.Column="1" Grid.Row="1"  Text="{Binding Voltage }" />
 
-                    <Label Grid.Column="0" Grid.Row="2" Margin="0,0,0,0" 
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                               Content="{x:Static res:Resources.DvdtVoltageRate}" />
-                    <Label Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right"
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                               Content="{Binding VoltageRate }" />
+                    <TextBlock Grid.Column="0" Grid.Row="2"  Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{x:Static res:Resources.DvdtVoltageRate}" />
+                    <TextBlock Grid.Column="1" Grid.Row="2" Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{Binding VoltageRate }" />
 
-                    <Label Grid.Column="0" Grid.Row="3" Margin="0,0,0,0"
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                       Content="{x:Static res:Resources.DvdtConfirmationCount}" />
-                    <Label Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right"
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                       Content="{Binding ConfirmationCount }" />
+                    <TextBlock Grid.Column="0" Grid.Row="3"  Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{x:Static res:Resources.DvdtConfirmationCount}" />
+                    <TextBlock Grid.Column="1" Grid.Row="3" Visibility="{Binding Mode, Converter={StaticResource DT2V}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{Binding ConfirmationCount }" />
 
-                    <Label Grid.Column="0" Grid.Row="4" Margin="0,0,0,0"
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                       Content="{x:Static res:Resources.DvdtVoltageRateOffSet}" />
-                    <Label Grid.Column="2" Grid.Row="4" HorizontalAlignment="Right"
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                       Content="{Binding VoltageRateOffSet }" />
+                    <TextBlock Grid.Column="0" Grid.Row="4" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{x:Static res:Resources.DvdtVoltageRateOffSet}" />
+                    <TextBlock Grid.Column="1" Grid.Row="4" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{Binding VoltageRateOffSet }" />
 
-                    <Label Grid.Column="0" Grid.Row="5" Margin="0,0,0,0"
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                       Content="{x:Static res:Resources.DvdtVoltageRateLimit}" />
-                    <Label Grid.Column="2" Grid.Row="5" HorizontalAlignment="Right"
-                                       Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                                       Content="{Binding VoltageRateLimit }" />
+                    <TextBlock Grid.Column="0" Grid.Row="5" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{x:Static res:Resources.DvdtVoltageRateLimit}" />
+                    <TextBlock Grid.Column="1" Grid.Row="5" Visibility="{Binding Mode, Converter={StaticResource DT2VB}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Text="{Binding VoltageRateLimit }" />
                 </Grid>
-            </Button>
-        </Grid>
-        <Grid Grid.Column="1">
-            <Button Name="button" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListView}}, Path=IsButtonDeleteVisible, Converter={StaticResource B2V}}"
-                            Background="White" Foreground="{StaticResource xPurple1}"
-                            VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-                            Width="{Binding RelativeSource={RelativeSource Self}, Path=Height}"
-                            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"
-                            Content="{StaticResource ClosePath}" Click="Button_OnClick"
-                            />
-        </Grid>
-    </Grid>
 </UserControl>
